# cli

./: .gitignore  Cargo.toml  README.md  README.zhcn.md  README.zhhant.md  README.zhtw.md  README_zhCN.md  config.toml  deny.toml  fast-down.example.yaml
.github/workflows/: build.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: download.rs  persist.rs  reader.rs
crates/cli/src/fmt/: info.rs  mod.rs  time.rs
crates/core/src/base/: event.rs
crates/core/src/core/: auto.rs  multi.rs  single.rs
crates/core/src/utils/: file.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  common.rs  main.rs  progress.rs  render.rs  state.rs
crates/tui/src/widget/: stats.rs
crates/tui/src/worker/: mod.rs
docs/: CNAME  index.html
locales/: en.yml  zh-CN.yml  zh-TW.yml
scripts/: install.ps1  install.sh
src/: args.rs  clean.rs  config.rs  download.rs  env.rs  main.rs  persist.rs  reader.rs  space.rs  store.rs  task.rs  task_example.rs  update.rs
src/commands/: clean.rs  download.rs  list.rs  mod.rs  update.rs
src/fmt/: info.rs  mod.rs  size.rs  string.rs
src/model/: downloading.rs
src/progress/: draw.rs  invert.rs
src/utils/: confirm.rs  mod.rs  space.rs
