[package]
name = "fast-down-cli"
version = "2.7.2"
edition = "2024"
license = "MIT"
authors = ["share121 <2854631158@qq.com>"]
repository = "https://github.com/fast-down/cli"
readme = "README.md"
exclude = ["/.github"]
description = "超级快的下载器命令行界面"
documentation = "https://docs.rs/fast-down-cli"
homepage = "https://github.com/fast-down/cli"
keywords = ["concurrency", "downloader", "parallel", "performance", "thread"]
categories = ["command-line-utilities", "network-programming"]

[package.metadata.i18n]
available-locales = ["en", "zh-TW", "zh-CN"]
default-locale = "en"

[[bin]]
name = "fd"
path = "src/main.rs"

[dependencies]
bitcode = "0.6.9"
bytes = "1.11.1"
clap = { version = "4.5.58", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dashmap = "6.1.0"
dialoguer = "0.12.0"
fast-down = { version = "3.7.1", default-features = false, features = ["utils"] }
# fast-down = { git = "https://github.com/fast-down/core", version = "3.6.4", default-features = false, features = [
#   "utils"
# ] }
# fast-down = { path = "../core/crates/fast-down/" }
fs4 = "0.13.1"
futures = "0.3.31"
mimalloc = "0.1.48"
parking_lot = "0.12.5"
reqwest = { version = "0.13.2", default-features = false, features = [
  "default-tls",
  "brotli",
  "deflate",
  "gzip",
  "http2",
  "socks",
  "system-proxy",
  "zstd"
] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust-i18n = "3.1.5"
sanitize-filename = "0.6.0"
soft-canonicalize = { version = "0.5.4", features = ["dunce"] }
sys-locale = "0.3.2"
tokio = { version = "1.49.0", default-features = false, features = [
  "io-std",
  "macros",
  "rt-multi-thread",
  "signal"
] }
tokio-util = "0.7.18"
url = "2.5.8"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
