[package]
name = "fast-down-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true

[dependencies]
ratatui = "0.29.0"
fast-down = { workspace = true }
color-eyre.workspace = true
crossterm = "0.29.0"
oneshot = "0.1.11"
flume = "0.11.1"
tokio.workspace = true
futures = "0.3.31"
reqwest.workspace = true
fxhash = "0.2.1"
slab = "0.4.10"
